--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ img {
     position: relative;
     background: url("../images/bg-main.jpg") no-repeat center center/cover, linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
 }
+
 .showcase::after {
     content: "";
     position: absolute;
@@ -63,8 +64,10 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); /* Adjust the opacity as needed */
-    pointer-events: none; /* Allow interaction with the content behind the overlay */
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    /* Adjust the opacity as needed */
+    pointer-events: none;
+    /* Allow interaction with the content behind the overlay */
 }
 
 .showcase-top {
@@ -76,16 +79,16 @@ img {
 .showcase-top img {
     width: 150px;
     position: absolute;
-    top:30%;
-    left:20%;
-    
+    top: 30%;
+    left: 20%;
+
 }
 
 .showcase-top a {
     position: relative;
     top: 50%;
-    left:80%;
-    transform: translate(0px,-50%);
+    left: 80%;
+    transform: translate(0px, -50%);
 }
 
 .showcase-content {
@@ -123,8 +126,10 @@ img {
 .btn-rounded {
     border-radius: 5px;
 }
+
 .email::placeholder {
-    color: #999999d3; /* Set the placeholder text color to a specific color, e.g., gray (#999) */
+    color: #999999d3;
+    /* Set the placeholder text color to a specific color, e.g., gray (#999) */
 }
 
 .email {
@@ -142,25 +147,94 @@ img {
     font-weight: bold;
     border-radius: 5px;
 }
+
 .features {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 5px rgba(255, 255, 255, 0.349) solid;
+}
+
+.f1 {
+    display: block;
+    height: 550px;
+    border-top: 5px rgba(255, 255, 255, 0.349) solid;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+}
+
+.content {
+    margin: 50px;
+    margin-right: 0px;
+    /* height: 100%; */
+    width: 40%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.content h1,
+p {
+    margin-left: 20px;
+}
+
+.image {
+    margin: 50px;
+    margin-left: 0px;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.vid {
+    display: block;
+    height: 70%;
+    width: 80%;
+    object-fit: cover;
+
+}
+
+.vid img {
+    max-height: 100%;
+    width: auto;
+    display: block;
+    margin-left: 50px;
+}
+
+.drop-down {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.f {
-    width: 100%;
-    text-align: center; /* Center the text horizontally */
-}
-
-.f img {
-    height: 100px;
-    width: auto;
-}
-
-/* Optional: Add margin or padding to space out the text and image */
-.f1 {
+.drop-down h1 {
+    margin-top: 50px;
     margin-bottom: 10px;
 }
 
+.drops {
+    width: 80%;
+    height: 80px;
+    background-color: #696868;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.drops h2 {
+    
+    margin-left: 50px; /* Pushes h2 to the right */
+    
+}
+
+.drops i {
+    margin-right: 20px; /* Pushes icon to the right */
+    font-size: 30px;
+}
