--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,7 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .drop-down h1 {
@@ -219,22 +220,35 @@ p {
 
 .drops {
     width: 80%;
-    height: 80px;
-    background-color: #696868;
     margin-bottom: 10px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-
+}
+.paras {
+    margin-top: 2.5px;
+    height: auto; /* Remove fixed height */
+    background-color: #696868;
+    width: 100%;
+    padding: 10px;
+    margin-left: 0; /* Add padding for better appearance */
+    display: none;
+}
+.drops a {
+    display: flex;
+    height: 80px;
+    background-color: #696868;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .drops h2 {
-    
-    margin-left: 50px; /* Pushes h2 to the right */
-    
+    margin-left: 50px;
 }
 
 .drops i {
-    margin-right: 20px; /* Pushes icon to the right */
+    margin-right: 20px;
+    
     font-size: 30px;
 }
